--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,6 +1,6 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@import "tailwindcss/base";
+@import "tailwindcss/components";
+@import "tailwindcss/utilities";
 
 :root {
   --background: #ffffff;
@@ -18,4 +18,7 @@ body {
   color: var(--foreground);
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
+}
+.MuiCardHeader-root {
+  visibility: visible; /* ตรวจสอบให้มั่นใจว่าไม่ถูกซ่อน */
 }
